# geometry-game

./: .gitignore  README.md  constants.py  geometry.py  main.py  pyproject.toml  ui.py
.github/workflows/: build-and-release.yaml
geometry_game/: __main__.py  constants.py  geometry.py  main.py  ui.py
scripts/: build.ps1  build.sh
